[metadata]
name = django_graphbox
version = 1.2.6
description = Package for easy building GraphQL API with Django
long_description = file:docs/source/quickstart.rst
url = https://github.com/yefeza/django-graphbox
author = Yeison Fernandez
author_email = contacto@90horasporsemana.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
include_package_data = true
package_dir=
    =src
packages=find:
python_requires = >=3.6
install_requires =
    Django >= 2.2.1
    graphene-django >= 2.15.0
    graphene-file-upload >= 1.2.2
    pyjwt >= 2.3.0
    urllib3 >= 1.26.9
    pillow >= 8.4.0
    facebook-sdk >= 3.1.0
    google-auth >= 1.6.3
    moodlepy >= 0.22.2
    
[options.packages.find]
where=src