[metadata]
name = django_graphbox
version = 1.3.8
description = Package for easy building GraphQL API with Django
long_description = file:docs/source/quickstart.rst
url = https://github.com/yefeza/django-graphbox
author = Yeison Fernandez
author_email = contacto@90horasporsemana.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
include_package_data = true
package_dir=
    =src
packages=find:
python_requires = >=3.6
install_requires =
    Django >= 2.2.1,<=4.2.6
    graphene-django >= 2.15.0
    pyjwt >= 2.3.0
    urllib3 >= 1.26.9
    pillow >= 8.4.0,<10.0.0
    facebook-sdk >= 3.1.0
    google-auth >= 1.6.3

[options.packages.find]
where=src